2012-04-10  Patrick Gansterer  <paroga@webkit.org>

        Cleanup wtf/Platform.h and config.h files
        https://bugs.webkit.org/show_bug.cgi?id=83431

        Reviewed by Eric Seidel.

        The ENABLE() and USE() macros take care about the case when the flag
        isn't defined. So there is no need to define anything with 0.

        Also move duplicated code from the config.h files to Platform.h and
        merge a few preprocessor commands to make the file more readable.

        * config.h:
        * wtf/Platform.h:

2012-04-10  Filip Pizlo  <fpizlo@apple.com>

        DFG should flush SetLocals to arguments
        https://bugs.webkit.org/show_bug.cgi?id=83554

        Reviewed by Gavin Barraclough.
        
        Added an isRoot() method that is a faster shorthand for saying
        find() == this.

        * wtf/UnionFind.h:
        (WTF::UnionFind::isRoot):
        (UnionFind):

2012-04-10  Adam Klein  <adamk@chromium.org>

        Remove unused NonNullPassRefPtr from WTF
        https://bugs.webkit.org/show_bug.cgi?id=82389

        Reviewed by Kentaro Hara.

        NonNullPassRefPtr seems to be unused since JSC allocation was
        restructured in r84052.

        If someone decides they need this later, they can always revert this patch.

        * wtf/PassRefPtr.h:
        * wtf/RefPtr.h:
        (RefPtr):

2012-04-10  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Enable USE_FOLDERS property
        https://bugs.webkit.org/show_bug.cgi?id=83571

        Reviewed by Daniel Bates.

        Setting the FOLDER property on targets gives more structure 
        to the generated Visual Studio solutions.
        This does not affect other CMake generators.

        * wtf/CMakeLists.txt:

2012-04-09  Patrick Gansterer  <paroga@webkit.org>

        Port BinarySemaphoreWin.cpp to WinCE
        https://bugs.webkit.org/show_bug.cgi?id=83502

        Reviewed by Daniel Bates.
