@@ -1,3 +1,12 @@
+2012-04-10  Mark Rowe  <mrowe@apple.com>
+
+        <rdar://problem/10583749> WebKit2 should log to both ASL and stderr
+
+        Reviewed by Sam Weinig.
+
+        * wtf/Assertions.cpp: Add a WTFLogAlways function that unconditionally logs the given message.
+        * wtf/Assertions.h:
+
 2012-04-10  Patrick Gansterer  <paroga@webkit.org>
 
         Cleanup wtf/Platform.h and config.h files
